// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// Protos used by crash_reporter.
syntax = "proto3";

package crash;

// Configures which crash reports are generated when running in a VM.
message VmCrashFilters {
  // If ANY of these filters match, don't report the crash.
  repeated VmCrashFilter filters = 1;
}

// A single filter for crash reports. If multiple fields are set, ALL fields
// must match for the filter to match.
message VmCrashFilter {
  // Don't report crashes for processes whose executable path is prefixed by
  // this path.
  string blocked_path = 1;
}
